# ssl-service

./: .deploy.yaml  .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  ssl-service
.github/workflows/: publish-image.yml
scripts/: container-entrypoint.sh  dev-admin.py  domain-manage.sh  install.sh  recover_routes_from_certificates.py  register-ssl-service.sh  setup-dev.sh  setup.sh
sql/: schema.sql
src/ssl_proxy_controller/: __main__.py  acme.py  admin.py  caddy.py  config.py  controller.py  db.py  db_registry.py  db_sync.py  nodes.py  nodes_init.py  services_deploy.py
src/ssl_proxy_controller/static/: index.html
systemd/: caddy.service  ssl-proxy-controller.service
tests/: test_acme.py  test_admin.py  test_caddy.py  test_config.py  test_controller.py  test_db.py  test_domain_manage.py  test_interactive_cli.py  test_setup.py
